# umockdev

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  README.rst  autogen.sh  configure.ac  do-release  meson.build  meson_options.txt  packit.yaml
.github/: release.eloquent.yml
.github/workflows/: release.yml  tests.yml
devices/cameras/: canon-powershot-sx200.ioctl  canon-powershot-sx200.umockdev  canon-powershot-sx200.umockdump  test-photos.tar  update-powershot-ioctl
devices/cros_ec/: crosfingerprint.ioctl  crosfingerprint.umockdev
devices/hidraw/: fido2.ioctl  fido2.script  fido2.umockdev
devices/input/: synaptics-touchpad.evemu-record.ioctl  synaptics-touchpad.ioctl  synaptics-touchpad.umockdev  usbkbd.evtest.ioctl  usbkbd.evtest.script  usbkbd.evtest.script.32  usbkbd.pcap.pcapng  usbkbd.pcap.umockdev  usbkbd.umockdev
devices/mobiles/: sony-xperia-mini-pro.mtp-tools.ioctl.xz  sony-xperia-mini-pro.umockdev
devices/spi/: elanfingerprint.ioctl  elanfingerprint.umockdev
docs/: script-format.txt
docs/examples/: battery.c  battery.py
docs/reference/: Makefile.am  meson.build  umockdev-docs.xml  umockdev-sections.txt  umockdev.types
packaging/: umockdev.spec
src/: UMockdev-1.0.metadata  assertions.vapi  config.vapi  cros_ec.h  debug.c  debug.h  getversion.sh  glibc.vapi  ioctl.h  ioctl.vapi  ioctl_termios.c  ioctl_termios.h  ioctl_termios.vapi  ioctl_tree.c  ioctl_tree.h  ioctl_tree.vapi  libpcap.vapi  libumockdev-preload.c  linux_fixes.vapi  posix_extra.vapi  preload_detect.c  preload_detect.h  selinux.vapi  test-umockdev.c  test-umockdev.py  test-umockdump  uevent_sender.c  uevent_sender.h  uevent_sender.vapi  umockdev-1.0.pc.in  umockdev-ioctl.vala  umockdev-pcap.vala  umockdev-record  umockdev-record.vala  umockdev-run.vala  umockdev-spi.vala  umockdev-utils.vala  umockdev-wrapper  umockdev.c  umockdev.h  (+6 more)
tests/: assertions.vapi  chatter-socket-stream.c  chatter.c  ioctl.vapi  main.fmf  readbyte.c  run-alpine  run-alpine-docker  run-apt  run-centos  run-centos-docker  run-dnf  run-fedora  run-gentoo  run-nix  run-ubuntu  run-ubuntu-chroot  test-integration.vala  test-ioctl-tree.c  test-static-code  test-umockdev-record  test-umockdev-record.vala  test-umockdev-run.vala  test-umockdev-vala.vala  test-umockdev.c  test-umockdev.py  test-umockdump  w740su-touchpad.umockdev  xorg-dummy.conf
